cabal-version: 1.24

name:        asterius-webgl-example
version:     0.0.1
license:     BSD3
build-type:  Simple

library
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010
  exposed-modules:
      WebGL
    , Windowing
  build-depends:
      base
    , asterius-prelude
    , colour
    , linear
    , vector

executable awgl
  main-is: Main.hs
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends:
      base
    , asterius-webgl-example
    , asterius-prelude
    , colour
    , linear
    , vector